# TrainStation

./: .gitignore  LICENSE  README.md  install.bat  install.sh  pyproject.toml  run.py  run_ui.py  start_train.bat  start_train.sh  start_ui.bat  start_ui.sh  update.bat  update.sh
config/examples/: wan_full_finetune_48gb.yaml  wan_lora_12gb.yaml  wan_lora_24gb.yaml
docs/plans/: 2026-03-02-phase6-ui-design.md  (+7 more)
requirements/: base.txt  cpu.txt  cuda.txt  optimizers.txt
tests/: conftest.py  test_activation_offload.py  test_adamw_advanced.py  test_api_routes.py  test_augmentations.py  test_compile.py  test_config.py  test_config_binder.py  test_data_pipeline.py  test_dora.py  test_ema.py  test_ema_integration.py  test_flux1_components.py  test_flux2_components.py  test_flux_kontext_components.py  test_framepack_components.py  test_fused_backward.py  test_gradient_checkpointing.py  test_hf_utils.py  test_hunyuan_video_components.py  test_hv_1_5_components.py  test_imports.py  test_kandinsky5_components.py  test_loss.py  test_loss_weighting.py  test_lr_scaling.py  test_masked_training.py  test_methods.py  test_network_weight_loading.py  test_networks.py  test_oom_retry.py  test_optimizers.py  test_preflight.py  test_presets.py  test_quantization.py  test_queue.py  test_qwen_image_components.py  test_registry.py  test_regularization.py  test_samples_api.py  (+16 more)
trainer/: __init__.py  adamw_advanced.py  callbacks.py  ema.py  errors.py  events.py  loss.py  loss_weighting.py  optimizers.py  registry.py  schedulers.py
ui/: binding.py  presets.py  queue.py  runner.py  server.py
(+188 files in other folders)
